crates/vouched/tests/ui/vouched/impls_try_from_empty_list.stderr
error: impls(try_from(...)) requires at least one type. Empty type list is not allowed.
 --> tests/ui/vouched/impls_try_from_empty_list.rs:4:10
  |
4 | #[derive(Vouched)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Vouched` (in Nightly builds, run with -Z macro-backtrace for more info)
