crates/vouched/tests/ui/vouched/impls_try_from_empty_list.rs
use vouched::Vouched;

// impls(try_from()) with empty type list should be rejected
#[derive(Vouched)]
#[vouched(impls(try_from()))]
struct EmptyTryFromImpls(i32);

fn main() {}
